include/playbox/pb_state.h

typedef struct pb_app pb_app;
PB_API int pb_is_key_down(const pb_app* app, pb_key key);
PB_API int pb_is_key_pressed(const pb_app* app, pb_key key);
PB_API int pb_is_key_released(const pb_app* app, pb_key key);
PB_API int pb_is_char_down(const pb_app* app, uint32_t codepoint);
PB_API int pb_is_char_pressed(const pb_app* app, uint32_t codepoint);
PB_API int pb_get_mouse_x(const pb_app* app);
PB_API int pb_get_mouse_y(const pb_app* app);
PB_API int pb_is_mouse_button_down(const pb_app* app, int button);
PB_API int pb_is_mouse_button_pressed(const pb_app* app, int button);
PB_API int pb_is_mouse_button_released(const pb_app* app, int button);
PB_API int pb_get_mouse_wheel(const pb_app* app);
PB_API double pb_get_frame_time(const pb_app* app);
PB_API int pb_get_fps(const pb_app* app);
PB_API int pb_is_focused(const pb_app* app);