bindings/d/playbox.d

/**
 * PlayboxLib — production D bindings.
 *
 * Low-level `extern(C)` ABI + idiomatic `App` / `Framebuffer` wrappers.
 *
 * Build demo:
 *   dub run --root bindings/d
 * or:
 *   dmd -fPIC -Ibindings/d bindings/d/demo.d bindings/d/playbox.d \
 *     -L-Lbuild/lib -L-lplaybox -L-lm -L-rpath=build/lib -ofbuild/bin/pb_d_demo
 */
module playbox;

import core.stdc.string : memset, strlen;
import std.string : toStringz;
import std.conv : to;

// ---------------------------------------------------------------------------
// ABI
// ---------------------------------------------------------------------------

extern (C) {
    struct pb_color { ubyte r, g, b; }
    struct pb_cell {
        uint ch;
        pb_color fg;
        pb_color bg;
        ushort style;
    }
    struct pb_fb {
        int w, h;
        pb_cell* cells;
        int cam_x, cam_y;
        int clip_x0, clip_y0, clip_x1, clip_y1;
    }
    struct pb_app;

    struct pb_key_event {
        int key;
        uint codepoint;
        ubyte alt, ctrl, shift, pressed;
    }
    struct pb_mouse_event {
        int x, y;
        ubyte button, pressed;
        int wheel;
        ubyte shift, alt, ctrl;
    }
    struct pb_resize_event { int width, height; }
    struct pb_focus_event { ubyte focused; }

    union pb_event_data {
        pb_key_event key;
        uint text;
        pb_mouse_event mouse;
        pb_resize_event resize;
        pb_focus_event focus;
    }
    struct pb_event {
        int type;
        pb_event_data as;
    }

    alias pb_on_init_fn = void function(pb_app*, void*);
    alias pb_on_event_fn = void function(pb_app*, void*, const(pb_event)*);
    alias pb_on_update_fn = void function(pb_app*, void*, double);
    alias pb_on_draw_fn = void function(pb_app*, void*, pb_fb*);
    alias pb_on_shutdown_fn = void function(pb_app*, void*);

    struct pb_app_desc {
        const(char)* title;
        int target_fps;
        uint flags;
        pb_cell clear;
        pb_on_init_fn on_init;
        pb_on_event_fn on_event;
        pb_on_update_fn on_update;
        pb_on_draw_fn on_draw;
        pb_on_shutdown_fn on_shutdown;
    }

    struct pb_sheet {
        pb_fb atlas;
        int tile_w, tile_h, cols, rows, owns_atlas;
    }
    struct pb_anim {
        const(int)* frames;
        int frame_count;
        float fps, t;
        int loop; // matches C pb_anim.loop
    }
    struct pb_particle {
        float x, y, vx, vy, life, max_life;
        pb_color color;
        ubyte alive;
    }
    struct pb_particles {
        pb_particle* items;
        int count, capacity;
    }

    enum {
        PB_STYLE_BOLD = 1, PB_STYLE_DIM = 2, PB_STYLE_UNDERLINE = 4,
        PB_STYLE_REVERSE = 8, PB_STYLE_ITALIC = 16, PB_STYLE_STRIKETHROUGH = 32
    }
    enum {
        PB_KEY_NONE=0, PB_KEY_ESC, PB_KEY_ENTER, PB_KEY_BACKSPACE, PB_KEY_TAB,
        PB_KEY_UP, PB_KEY_DOWN, PB_KEY_LEFT, PB_KEY_RIGHT,
        PB_KEY_HOME, PB_KEY_END, PB_KEY_PGUP, PB_KEY_PGDN, PB_KEY_INS, PB_KEY_DEL,
        PB_KEY_F1, PB_KEY_F2, PB_KEY_F3, PB_KEY_F4, PB_KEY_F5, PB_KEY_F6,
        PB_KEY_F7, PB_KEY_F8, PB_KEY_F9, PB_KEY_F10, PB_KEY_F11, PB_KEY_F12, PB_KEY_COUNT
    }
    enum { PB_MOUSE_LEFT=0, PB_MOUSE_MIDDLE=1, PB_MOUSE_RIGHT=2 }
    enum {
        PB_EVENT_NONE=0, PB_EVENT_KEY, PB_EVENT_TEXT, PB_EVENT_MOUSE,
        PB_EVENT_RESIZE, PB_EVENT_QUIT, PB_EVENT_FOCUS
    }
    enum {
        PB_BOX_SINGLE=0, PB_BOX_DOUBLE, PB_BOX_ROUNDED, PB_BOX_HEAVY, PB_BOX_ASCII, PB_BOX_DASHED
    }
    enum { PB_BLEND_REPLACE=0, PB_BLEND_ALPHA, PB_BLEND_ADD, PB_BLEND_MUL }

    pb_color pb_rgb_ex(ubyte r, ubyte g, ubyte b);
    pb_cell pb_cell_ex(uint ch, pb_color fg, pb_color bg, ushort style);
    const(char)* pb_version_string();
    void pb_version(int* major, int* minor, int* patch);
    int pb_char_width(uint codepoint);

    pb_app* pb_app_create(const(pb_app_desc)* desc, void* user);
    void pb_app_destroy(pb_app* app);
    int pb_app_run(pb_app* app);
    void pb_app_quit(pb_app* app);
    void pb_app_request_resize(pb_app* app);
    int pb_app_width(const(pb_app)* app);
    int pb_app_height(const(pb_app)* app);
    void pb_app_set_title(pb_app* app, const(char)* title);
    void pb_app_set_clear(pb_app* app, pb_cell clear);
    void pb_app_set_target_fps(pb_app* app, int fps);
    int pb_app_is_replay(const(pb_app)* app);
    int pb_app_is_recording(const(pb_app)* app);
    uint pb_app_replay_seed(const(pb_app)* app);

    int pb_is_key_down(const(pb_app)* app, int key);
    int pb_is_key_pressed(const(pb_app)* app, int key);
    int pb_is_key_released(const(pb_app)* app, int key);
    int pb_is_char_down(const(pb_app)* app, uint cp);
    int pb_is_char_pressed(const(pb_app)* app, uint cp);
    int pb_get_mouse_x(const(pb_app)* app);
    int pb_get_mouse_y(const(pb_app)* app);
    int pb_is_mouse_button_down(const(pb_app)* app, int button);
    int pb_is_mouse_button_pressed(const(pb_app)* app, int button);
    int pb_is_mouse_button_released(const(pb_app)* app, int button);
    int pb_get_mouse_wheel(const(pb_app)* app);
    int pb_get_fps(const(pb_app)* app);
    double pb_get_frame_time(const(pb_app)* app);
    int pb_is_focused(const(pb_app)* app);

    void pb_fb_clear(pb_fb* fb, pb_cell fill);
    void pb_fb_put(pb_fb* fb, int x, int y, pb_cell c);
    pb_cell pb_fb_get(const(pb_fb)* fb, int x, int y);
    void pb_fb_put_blend(pb_fb* fb, int x, int y, pb_cell c, float alpha, int mode);
    void pb_fb_text(pb_fb* fb, int x, int y, const(char)* utf8, pb_color fg, pb_color bg, ushort style);
    void pb_fb_text_centered(pb_fb* fb, int y, const(char)* utf8, pb_color fg, pb_color bg, ushort style);
    int pb_fb_text_wrap(pb_fb* fb, int x, int y, int max_w, int max_h, const(char)* utf8, pb_color fg, pb_color bg, ushort style);
    void pb_fb_text_clipped(pb_fb* fb, int x, int y, int max_w, const(char)* utf8, pb_color fg, pb_color bg, ushort style);
    int pb_fb_measure_text(const(char)* utf8);
    void pb_fb_fill_rect(pb_fb* fb, int x, int y, int w, int h, pb_cell c);
    void pb_fb_fill_shade(pb_fb* fb, int x, int y, int w, int h, pb_color fg, pb_color bg, int level);
    void pb_fb_hline(pb_fb* fb, int x, int y, int w, pb_cell c);
    void pb_fb_vline(pb_fb* fb, int x, int y, int h, pb_cell c);
    void pb_fb_line(pb_fb* fb, int x0, int y0, int x1, int y1, pb_cell c);
    void pb_fb_circle(pb_fb* fb, int cx, int cy, int radius, pb_cell c);
    void pb_fb_fill_circle(pb_fb* fb, int cx, int cy, int radius, pb_cell c);
    void pb_fb_fill_triangle(pb_fb* fb, int x0, int y0, int x1, int y1, int x2, int y2, pb_cell c);
    void pb_fb_box(pb_fb* fb, int x, int y, int w, int h, pb_color fg, pb_color bg, ushort style);
    void pb_fb_box_double(pb_fb* fb, int x, int y, int w, int h, pb_color fg, pb_color bg, ushort style);
    void pb_fb_box_ex(pb_fb* fb, int x, int y, int w, int h, int box_style, pb_color fg, pb_color bg, ushort style);
    void pb_fb_panel(pb_fb* fb, int x, int y, int w, int h, const(char)* title, pb_color border, pb_color title_fg, pb_color fill, ushort style);
    void pb_fb_panel_ex(pb_fb* fb, int x, int y, int w, int h, const(char)* title, int box_style, pb_color border, pb_color title_fg, pb_color fill, ushort style);
    void pb_fb_shadow(pb_fb* fb, int x, int y, int w, int h, pb_color shadow, float alpha);
    void pb_fb_blit(pb_fb* dst, int dx, int dy, const(pb_fb)* src);
    void pb_fb_blit_masked(pb_fb* dst, int dx, int dy, const(pb_fb)* src, uint transparent_ch);
    void pb_fb_blit_blend(pb_fb* dst, int dx, int dy, const(pb_fb)* src, float alpha, int mode);
    void pb_fb_blit_tile(pb_fb* dst, int dx, int dy, const(pb_sheet)* sheet, int tile_id);
    void pb_fb_plot(pb_fb* fb, int px, int py, pb_color color);
    void pb_fb_plot_blend(pb_fb* fb, int px, int py, pb_color color, float alpha);
    void pb_fb_plot_fill_circle(pb_fb* fb, int cx, int cy, int radius, pb_color color);
    void pb_fb_braille_clear(pb_fb* fb, pb_color bg);
    void pb_fb_braille_plot(pb_fb* fb, int px, int py, pb_color color);
    void pb_fb_braille_plot_blend(pb_fb* fb, int px, int py, pb_color color, float alpha);
    void pb_fb_braille_line(pb_fb* fb, int x0, int y0, int x1, int y1, pb_color color);
    void pb_fb_braille_fill_circle(pb_fb* fb, int cx, int cy, int radius, pb_color color);
    void pb_fb_braille_fill_triangle(pb_fb* fb, int x0, int y0, int x1, int y1, int x2, int y2, pb_color color);
    void pb_fb_quad_plot(pb_fb* fb, int px, int py, pb_color color);
    void pb_fb_quad_fill_circle(pb_fb* fb, int cx, int cy, int radius, pb_color color);
    void pb_fb_pixel(pb_fb* fb, int x, int y, pb_color color);
    void pb_fb_set_camera(pb_fb* fb, int cam_x, int cam_y);
    void pb_fb_get_camera(const(pb_fb)* fb, int* out_x, int* out_y);
    void pb_fb_set_clip(pb_fb* fb, int x, int y, int w, int h);
    void pb_fb_reset_clip(pb_fb* fb);
    void pb_fb_fill_gradient_v(pb_fb* fb, int x, int y, int w, int h, pb_color top, pb_color bottom);
    void pb_fb_fill_gradient_h(pb_fb* fb, int x, int y, int w, int h, pb_color left, pb_color right);
    void pb_fb_fill_dither(pb_fb* fb, int x, int y, int w, int h, pb_color a, pb_color b, int pattern);

    pb_sheet pb_sheet_create(int cols, int rows, int tile_w, int tile_h);
    void pb_sheet_free(pb_sheet* sheet);
    void pb_sheet_set_tile(pb_sheet* sheet, int tile_id, const(pb_fb)* src);

    int pb_particles_init(pb_particles* ps, int capacity);
    void pb_particles_free(pb_particles* ps);
    void pb_particles_emit(pb_particles* ps, float x, float y, float vx, float vy, float life, pb_color color);
    void pb_particles_update(pb_particles* ps, double dt);
    void pb_particles_draw_braille(pb_fb* fb, const(pb_particles)* ps);
    void pb_particles_draw_half(pb_fb* fb, const(pb_particles)* ps);
}

// ---------------------------------------------------------------------------
// Helpers
// ---------------------------------------------------------------------------

pb_color rgb(ubyte r, ubyte g, ubyte b) { return pb_rgb_ex(r, g, b); }
pb_cell cell(uint ch, pb_color fg, pb_color bg, ushort style = 0) {
    return pb_cell_ex(ch, fg, bg, style);
}
string versionString() {
    import std.string : fromStringz;
    return fromStringz(pb_version_string()).idup;
}

// ---------------------------------------------------------------------------
// Idiomatic Framebuffer view
// ---------------------------------------------------------------------------

struct Framebuffer {
    pb_fb* raw;

    @property int width() const { return raw ? raw.w : 0; }
    @property int height() const { return raw ? raw.h : 0; }

    void put(int x, int y, pb_cell c) { pb_fb_put(raw, x, y, c); }
    void putBlend(int x, int y, pb_cell c, float alpha, int mode = PB_BLEND_ALPHA) {
        pb_fb_put_blend(raw, x, y, c, alpha, mode);
    }
    pb_cell get(int x, int y) { return pb_fb_get(raw, x, y); }
    void clear(pb_cell fill) { pb_fb_clear(raw, fill); }

    void text(int x, int y, string s, pb_color fg, pb_color bg, ushort style = 0) {
        pb_fb_text(raw, x, y, s.toStringz, fg, bg, style);
    }
    void textCentered(int y, string s, pb_color fg, pb_color bg, ushort style = 0) {
        pb_fb_text_centered(raw, y, s.toStringz, fg, bg, style);
    }
    int textWrap(int x, int y, int maxW, int maxH, string s, pb_color fg, pb_color bg, ushort style = 0) {
        return pb_fb_text_wrap(raw, x, y, maxW, maxH, s.toStringz, fg, bg, style);
    }
    void textClipped(int x, int y, int maxW, string s, pb_color fg, pb_color bg, ushort style = 0) {
        pb_fb_text_clipped(raw, x, y, maxW, s.toStringz, fg, bg, style);
    }
